"fixed body cutting off in desktop version"

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
   flex-wrap: wrap; 
   background-color: #fff;
   margin: auto;
-  /* align-items: flex-start;  */
 }
 /* ----- =HEADER top bun ----- */
 header {
@@ -64,48 +63,25 @@ h2 {
   display: flex; 
   flex-direction: column;
   justify-content: center; 
-  /* align-items: flex-start;  */
-  /* display: grid;
-  grid-template-rows: 50% 50%;  */
   width: 100%;
   margin: 1%;
   padding: 5px; 
-  /* border: 3px solid #73AD21; */
 }
 .intro-image {
-  /* make this box smaller the photo sits 
-  in smaller*/
-  /* padding: 15px;  */
-  /* flex: 1; */
-  /* flex-shrink: 0;   */ 
   width: 100%; 
 }
 img {
-  /* padding: 25px; */
   border-radius: 40px;
   width: 400px; 
-  /* max-width: 75%; */
   height: auto; 
 }
-/* .pic {
-  display: block;
-  justify-content: left;
-  margin-right: auto;
-  
-}     */
 .intro-text {
-  /* flex-shrink: 0;  */
   width: 50%;
-  /* display: inline-block;  */
   border: 5px black solid; 
   background-color:rgb(217, 206, 241);
   margin: 0 50px 0 0; 
   padding: 10px; 
   border-radius: 10px;
-  /* align-content: center; */
-  /* float: left;  */
-  /* max-height: 100px;  */
-  
 }
 h3 {
   font-family: Georgia, 'Times New Roman', Times, serif; 
@@ -115,16 +91,11 @@ h3 {
 }
 .welcome {
   color: rgb(99, 79, 187);
-  /* text-align: left; */
 }
 p {
   font-family: georgia;
   font-size: 22px;
   color: #000000;
-  /* margin: 10px;
-  margin-left:30px;
-  margin-right:30px;
-  text-align: left; */
 } 
 p a {
   font-size: 18px; 
@@ -158,17 +129,6 @@ h4 {
   grid-auto-flow: row;
   grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
 }
-/* .portfolio-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden
-}
-.portfolio-image {
-  flex-shrink: 0;
-  min-width: 100%;
-  min-height: 100%
-} */
 /* ----- =CONTACT 4of4 sections in main ----- */
 .contact-container {
   padding: 15px; 
@@ -176,13 +136,6 @@ h4 {
 .contact-left {
   float: left;
 }
-/* .contact-right {
-  margin-left: 10px; 
-} */
-/* .contact-pic {
-  padding: 25px; 
-  
-} */
 .btn-primary {
   color: #fff;
   background-color: #337ab7;
@@ -221,7 +174,6 @@ form {
   justify-content: center;
   padding: 5%;
   align-items: stretch;
-  /* min-width: 250px;  */
 }             
 #message {
   height: 200px; 
@@ -252,15 +204,8 @@ h6 {
         max-width: 600px;
         min-width: 350px;
     }
-    body {
-      flex-direction: row;
-    }
     .intro-container {
       flex-direction: row;
-      /* justify-content: center;
-      padding: 15px; 
-      width: 50%; 
-      margin: 3%;  */
     }
     .portfolio-container {
       flex-direction: row;
@@ -270,87 +215,3 @@ h6 {
       flex-direction: row; 
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-/* ----- =STRUCTURE NOTES ----- */
-/* ----- =the page starts ----- */
-/* body */
-/* ----- =HEADER top bun ----- */
-  /* header
-    h1
-    h1 a 
-    nav
-    nav a */
-  /* ----- =MAIN meat ----- */
-  /* main */
-  /* ----- =INTRO 1of4 sections in main ----- */
-    /* section 
-    .intro
-    #intro 
-      .bar
-        h2
-      .intro-container
-        .intro-image
-          img
-          .pic
-        .intro-text
-          h1 
-          .welcome
-          p  */
-  /* ----- =ABOUT 2of4 sections in main ----- */
-    /* section
-    .about
-    #about
-      .about-text
-      .about-list
-        .bar
-          h2
-        .about-text
-          p
-        .about-list
-        ol
-          ol li */     
-  /* ----- =PORTFOLIO 3of4 sections in main ----- */
-    /* .portfolio
-    #portfolio
-      .bar
-        h2
-      .portfolio-container
-        .portfolio-box
-          img
-          .portfolio-image
-          h3
-          p
-          p a */
-  /* ----- =CONTACT 4of4 sections in main ----- */
-    /* .contact
-    #contact
-      .bar  
-        h2
-      .contact-container
-        .contact-left
-          .contact-image
-            .pic
-          .contact-socials
-            p
-              ul
-                ul li
-                ul li a
-        .contact-right
-          .form-box
-            form  
-              label
-              input */
-  /* ----- =FOOTER bottom bun ----- */
-  /* footer  
-    h3 */
-/* ----- =the page ends ----- */
